<?xml version="1.0"?>
<package format="2">
  <name>soem_vendor_ros2</name>
  <version>1.0.0</version>
  <description> ROS2 wrapper for SOEM.</description>

  <maintainer email="mcbed.robotics@gmail.com">Maciej Bednarczyk</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>
</package>
